New in 0.18.0
- Replace callback functions by promises?
- Avoid flashing?

New in 0.17.0
- Make it easy to use ZPT's original attributes. Added useOriginalTags method to context.
- New exported method: logHelper.

New in 0.16.0
- Bug fixed: local macros now work when defining one in an external file.
- Better error messages: error messages now show the source attribute or string expression.

New in 0.15.1
- Bug fixed: buildRemotePageUrlList could throw an exception trying to resolve an expression which can't be resolved before rendering the document.

New in 0.15.0
- New exported method: context.
- Better logging support: 
    - It can be activated or deactivated setting context.getConf().loggingOn (default is off).
    - The log level can be customized setting context.getConf().loggingLevel (default is ERROR).
    - It can be fully customized using context.setLogger( log4javascriptInstance ). See http://log4javascript.org/ for details.

New in 0.14.0
- Now data-idomain tags can be set to an array of I18n instances.

New in 0.13.2
- Bug fixed: generated tags not removed before loading remote pages.

New in 0.13.1
- Bug fixed: generated tags not removed when needed.

New in 0.13.0
- Added support of multiroot: root now can be a string or an array of them.

New in 0.12.0
- Added support of map attributtes.

New in 0.11.0
- Added support of expressions in use-macro. 
- Default delemiter character in external macros updated from '/'  to '@'.

New in 0.10.0
- Added in expressions.

New in 0.9.2
- Bug fixed: wrong order in tal:repeat. 

New in 0.9.1
- Standalone version fixed. Using browserify-derequire.

New in 0.9.0
- Added support of object members (using array delimiters).

New in 0.8.0
- Added help to select the correct I18n instance. Add data-ilanguage tag.

New in 0.7.0
- Support of custom expressions. Refactoring of expressionEvaluator class.
- Cache of expressions and ZPT attributes.
- Some logging support.
- Support of Node.js. Sample and tests added.
